# multi-keyterm

./: CONTRIBUTING.md  README.md  meson.build  meson_options.txt  multi-keyterm.doap  run.in
.gitlab/issue_templates/: Bug.md  Crash.md
completion/: multi-keyterm
data/: meson.build  org.sadiqpk.multi-keyterm.desktop.in  org.sadiqpk.multi-keyterm.gschema.xml  org.sadiqpk.multi-keyterm.policy.in
data/icons/hicolor/: render-icons.sh
data/metainfo/: org.sadiqpk.multi-keyterm.metainfo.xml.in
docs/man/: meson.build  multi-keyterm.xml
po/: POTFILES.in  ar.po  meson.build
src/: main.c  meson.build  mkt-application.c  mkt-application.h  mkt-controller.c  mkt-controller.h  mkt-device.c  mkt-device.h  mkt-keyboard.c  mkt-keyboard.h  mkt-log.c  mkt-log.h  mkt-preferences-window.c  mkt-preferences-window.h  mkt-settings.c  mkt-settings.h  mkt-terminal.c  mkt-terminal.h  mkt-utils.c  mkt-utils.h  mkt-window.c  mkt-window.h
src/resources/: keyterm.gresource.xml
src/resources/css/: gtk.css
src/resources/gtk/: help-overlay.ui
src/resources/ui/: mkt-preferences-window.ui  mkt-terminal.ui  mkt-window.ui
tests/: meson.build  settings.c  utils.c
